--- a/VirtualStockMarket/requirements.txt
+++ b/VirtualStockMarket/requirements.txt
@@ -1,5 +1,7 @@
-dj-database-url==0.4.1
+dj-database-url==0.5.0
 Django==2.2.2
-gunicorn==19.6.0
-psycopg2==2.6.2
-whitenoise==3.2.2
+django-bootstrap3==11.0.0
+gunicorn==19.9.0
+psycopg2==2.8.3
+whitenoise==4.1.2
+
